# review-classfier

./: main.py  pyproject.toml  requirements.txt
data/: preprocess_data.py
task1_rating_prediction/: llm_model.py  structured_output.py  task1_notebook.ipynb
task1_rating_prediction/evaluations/: task1_evaluation.ipynb
task1_rating_prediction/prompts/: __init__.py  prompt_v1.py  prompt_v2.py  prompt_v3.py
task1_rating_prediction/results/: outputs.json  predictions.csv
